fix: sanitizer and add routes
