# openapi.sanitized.json
@@ -1356,14 +1356,14 @@
     },
     "/workspace/receipt/{receiptId}/blob": {
       "get": {
-        "description": "Retrieve the blob URL for a specific receipt in the authenticated workspace.",
+        "description": "Retrieve the receipt file binary for a specific receipt in the authenticated workspace.",
         "operationId": "ReceiptController_getReceiptBlob",
         "parameters": [
           {
             "name": "receiptId",
             "required": true,
             "in": "path",
-            "description": "Receipt ID to retrieve the blob URL for",
+            "description": "Receipt ID to retrieve the blob file for",
             "schema": {
               "type": "string"
             }
@@ -1380,11 +1380,12 @@
         ],
         "responses": {
           "200": {
-            "description": "Receipt blob URL retrieved successfully",
+            "description": "Receipt blob file retrieved successfully",
             "content": {
-              "application/json": {
+              "application/octet-stream": {
                 "schema": {
-                  "$ref": "#/components/schemas/ReceiptBlobResponse"
+                  "type": "string",
+                  "format": "binary"
                 }
               }
             }
@@ -2434,12 +2435,38 @@
           "carId": {
             "type": "string",
             "minLength": 1
+          },
+          "categoryId": {
+            "type": "string",
+            "minLength": 1
+          },
+          "routeItems": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "minLength": 1
+                },
+                "order": {
+                  "type": "integer",
+                  "minimum": 0,
+                  "maximum": 9007199254740991
+                }
+              },
+              "required": [
+                "name",
+                "order"
+              ]
+            }
           }
         },
         "required": [
           "startKm",
           "date",
-          "carId"
+          "carId",
+          "categoryId"
         ]
       },
       "GetMyRoutesRequest": {
@@ -2504,6 +2531,37 @@
                 ]
               },
               "carId": {
+                "anyOf": [
+                  {
+                    "type": "object",
+                    "additionalProperties": {
+                      "type": "string",
+                      "minLength": 1
+                    }
+                  },
+                  {
+                    "type": "object",
+                    "additionalProperties": {
+                      "type": "number"
+                    }
+                  },
+                  {
+                    "type": "object",
+                    "additionalProperties": {
+                      "type": "string",
+                      "format": "date-time",
+                      "pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))T(?:(?:[01]\\d|2[0-3]):[0-5]\\d(?::[0-5]\\d(?:\\.\\d+)?)?(?:Z))$"
+                    }
+                  },
+                  {
+                    "type": "object",
+                    "additionalProperties": {
+                      "type": "boolean"
+                    }
+                  }
+                ]
+              },
+              "categoryId": {
                 "anyOf": [
                   {
                     "type": "object",
@@ -2784,6 +2842,37 @@
                 ]
               },
               "carId": {
+                "anyOf": [
+                  {
+                    "type": "object",
+                    "additionalProperties": {
+                      "type": "string",
+                      "minLength": 1
+                    }
+                  },
+                  {
+                    "type": "object",
+                    "additionalProperties": {
+                      "type": "number"
+                    }
+                  },
+                  {
+                    "type": "object",
+                    "additionalProperties": {
+                      "type": "string",
+                      "format": "date-time",
+                      "pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))T(?:(?:[01]\\d|2[0-3]):[0-5]\\d(?::[0-5]\\d(?:\\.\\d+)?)?(?:Z))$"
+                    }
+                  },
+                  {
+                    "type": "object",
+                    "additionalProperties": {
+                      "type": "boolean"
+                    }
+                  }
+                ]
+              },
+              "categoryId": {
                 "anyOf": [
                   {
                     "type": "object",
@@ -3258,22 +3347,6 @@
           "userId",
           "createdAt",
           "updatedAt"
-        ]
-      },
-      "ReceiptBlobResponse": {
-        "type": "object",
-        "properties": {
-          "receiptId": {
-            "type": "string"
-          },
-          "blobUrl": {
-            "type": "string",
-            "format": "uri"
-          }
-        },
-        "required": [
-          "receiptId",
-          "blobUrl"
         ]
       },
       "WorkspacePublicResponse": {
